--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -8,69 +8,85 @@
 
     <ImageView
         android:id="@+id/ivCaratulaDetalle"
-        android:layout_width="match_parent"
-        android:layout_height="129dp"
+        android:layout_width="408dp"
+        android:layout_height="181dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/tira"
+        />
 
-    <TextView
-        android:id="@+id/tvAñoPeliculaDetalle"
-        android:layout_width="92dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle"
-        tools:layout_editor_absoluteX="303dp" />
-
-    <TextView
-        android:id="@+id/tvTituloDetalle"
-        android:layout_width="154dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle"
-        app:layout_constraintVertical_bias="0.025" />
-
-    <TextView
-        android:id="@+id/tvGeneroDetalle"
-        android:layout_width="296dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle" />
-
-    <TextView
+    <EditText
         android:id="@+id/tvDirectorDetalle"
-        android:layout_width="224dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Director"
+        android:inputType="textImeMultiLine"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvGeneroDetalle" />
+
+    <EditText
+        android:id="@+id/tvAñoPeliculaDetalle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Titulo(Año)"
+        android:inputType="textImeMultiLine"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/tvGeneroDetalle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Genero"
+        android:inputType="textImeMultiLine"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvAñoPeliculaDetalle" />
 
     <ImageButton
         android:id="@+id/ibLlamarDirectorD"
-        android:layout_width="58dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="96dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintStart_toEndOf="@+id/tvDirectorDetalle"
         app:layout_constraintTop_toBottomOf="@+id/ivCaratulaDetalle"
         app:srcCompat="@drawable/ic_baseline_phone_24"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <TextView
+    <EditText
         android:id="@+id/tvSinopsisDetalles"
-        android:layout_width="300dp"
-        android:layout_height="183dp"
+        android:layout_width="333dp"
+        android:layout_height="235dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Sinopsis"
+        android:inputType="textMultiLine"
+        android:textSize="17dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUrl" />
+
+    <EditText
+        android:id="@+id/etUrl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="URL imagen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDirectorDetalle" />
 
