--- a/app/src/main/res/layout/activity_peliculas.xml
+++ b/app/src/main/res/layout/activity_peliculas.xml
@@ -21,16 +21,17 @@
         android:id="@+id/faButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:backgroundTint="@color/cardview_dark_background"
-        android:layout_marginBottom="24dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="24dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:backgroundTint="@color/cardview_dark_background"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/tira"
         app:tint="@color/white"
-        android:focusable="true" />
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
