--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="100dp"
         android:ems="10"
         android:hint="DirectorNum"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDirector" />
 
@@ -65,7 +65,7 @@
         android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="Año"
-        android:inputType="textPersonName"
+        android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etRatingDetalle" />
 
@@ -100,7 +100,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Duracion"
-        android:inputType="textImeMultiLine"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTituloDetalle" />
 
@@ -112,7 +112,7 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Rating"
-        android:inputType="textImeMultiLine"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTiempoDuracion" />
 
