--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -7,6 +7,7 @@
     android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
+android:background="#F8F8F8"
     android:layout_height="match_parent"
     tools:context=".DetalleActivity">
 
