--- a/app/src/main/res/layout/activity_peliculas.xml
+++ b/app/src/main/res/layout/activity_peliculas.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="@dimen/margen_activity"
+android:background="#F8F8F8"
     android:layout_height="match_parent"
     tools:context=".PeliculasActivity">
+
 
 
     <androidx.recyclerview.widget.RecyclerView
