--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivCaratula"
         android:layout_width="146dp"
         android:layout_height="132dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,35 +19,37 @@
 
     <TextView
         android:id="@+id/tvTituloAño"
-        android:layout_width="202dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="12dp"
         android:hint="Titulo (año)"
+
         android:textSize="20dp"
-        app:layout_constraintStart_toEndOf="@+id/ivCaratula"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvRating"
-        android:layout_width="50dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:hint="Rating"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.397"
-        app:layout_constraintStart_toEndOf="@+id/tvDuracion"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTituloAño" />
 
     <TextView
         android:id="@+id/tvDuracion"
-        android:layout_width="121dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="4dp"
         android:hint="Duracion"
-        app:layout_constraintEnd_toEndOf="@+id/tvTituloAño"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvTituloAño"
+
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTituloAño" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
